# Game-Chooser

./: .gitignore  .gitmodules  CLAUDE.md  build_windows.sh  dialogs.py  exception_manager.py  game-chooser.py  game_list.py  library_manager.py  main_window.py  models.py  path_manager.py  pyproject.toml  readme.md  requirements.txt  validation_service.py
