[project]
name = "game-chooser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "frozendict>=2.4.6",
    "platform-utils>=1.6.0",
    "pywin32>=311 ; sys_platform == 'win32'",
    "six>=1.17.0",
    "wxpython==4.2.3",
]
